4.ordersystem/k8s/depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yoonzi-ns-order-backend
  namespace: yoonzi-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yoonzi-ns-order-backend
  template:
    metadata:
      labels:
        app: yoonzi-ns-order-backend
    spec:
      containers:
      - name: yoonzi-ns-order-backend
        image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/yoonzi-order-backend:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            # healthcheck 경로
            path: /product/list
            port: 8080
          # 컨테이너 시작 후 지연
          initialDelaySeconds: 10
          # 확인 반복 주기
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: yoonzi-ns-order-backend-service
  namespace: yoonzi-ns
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: yoonzi-ns-order-backend
