4.ordersystem/k8s/ingress_cert.yml
# ingress-controller 설치 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-backend-ingress
  namespace: yoonzi
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #첫번쨰 prefix제거
    cert-manager.io/cluster-issuer: my-issuer

spec:
  tls:
  - hosts:
    - "server.sagami003.store"
    secretName: server-sagami003-com-tls
  rules:
  - host: server.sagami003.store  # 설정하려는 도메인 이름. 제외시에 elb 주소로도 접근할수 있는 모든 도메인 접근 가능.
    http:
      paths:
      - path: /(.*) #모든 url요청을 nginx-service로 라우팅
        pathType: Prefix
        backend:
          service:
            name: yoonzi-order-backend-service
            port:
              number: 80
